# rust-azure-api-cdn-ip-list

./: Cargo.toml  README.md
src/: main.rs  parse_cdn.rs  req_get_info.rs
