[package]
name = "rust-azure-api"
version = "0.1.1"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.26", features = ["blocking", "json"] }
serde = { version = "1.0.228" , features = ["derive"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
serde_json = "1.0.145"
dotenv = "0.15.0"
